--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -2,6 +2,7 @@
   <strong><%= @company.name %>:</strong>
   <br>
   <div class="text-right">
+    <%= link_to 'Detalles', company_path(@company), class: 'btn btn-xs btn-primary' %>
     <%= link_to 'Editar', edit_company_path(@company), remote:true , class: 'btn btn-xs btn-success' %>
     <%= link_to 'Eliminar', company_path(@company), method: :delete, data: { confirm: 'Estás seguro que deseas eliminar el Compañia?',remote: true }, class: 'btn btn-xs btn-danger' %>
   </div>
